# cmakefortranc

./: CMakeLists.txt  test.f  testc.c
