project("fortrantest")
cmake_minimum_required(VERSION 2.8.5)
enable_language(Fortran)
enable_language(C)
include(FortranCInterface)
FortranCInterface_Header(FCMangle.h MACRO_NAMESPACE "FC_" SYMOBL_NAMESPACE "FC_" SYMBOLS calculate_x)
FortranCInterface_VERIFY(CXX)
include_directories("${fortrantest_BINARY_DIR}")
add_library(testl testc.c)
add_executable(test test.f testc.c)
add_executable(test90 test.f90 testc.c)
